feat: Simplify environment variable management
Removes the need to inject Firebase configuration via environment variables. Firebase configuration is now directly embedded in the `firebase.ts` file, and the Gemini API key is the only external environment variable required for AI features. This streamlines CI/CD pipelines and local development setup by centralizing sensitive configuration where possible.

--- a/deploy.yml
+++ b/deploy.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Build
         env:
+          # 僅需注入 Gemini API_KEY，Firebase 已在程式碼中設定
           API_KEY: ${{ secrets.API_KEY }}
-          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
         run: npm run build
 
       - name: Upload artifact
