--- a/deploy.yml
+++ b/deploy.yml
@@ -23,10 +23,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # 移除 cache: 'npm' 因為 Repository 中沒有 package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        # 使用 npm install 代替 npm ci，避免因為缺少 lock 檔案而導致建置失敗
+        run: npm install
 
       - name: Build
         env:
