--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: Build and Deploy to GitHub Pages
 
 on:
@@ -22,16 +23,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # 移除 cache: 'npm' 因為 Repository 中沒有 package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        # 使用 npm install 代替 npm ci，避免因為缺少 lock 檔案而導致建置失敗
+        run: npm install
 
       - name: Build
         env:
-          # 此處將 GitHub Secrets 注入為系統環境變數，Vite 會在建置時讀取
+          # 僅需注入 Gemini API_KEY，Firebase 已在程式碼中設定
           API_KEY: ${{ secrets.API_KEY }}
-          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
         run: npm run build
 
       - name: Upload artifact
